--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,9 @@
 PORT=3000
+SECRET_KEY=QWEASDZXCVBNM123456789
+SSH_HOST=132.249.242.198
+SSH_USER=jack
+SSH_PASS='DS%yYMoGay8M*pgyed7JV7'
+DB_HOST=localhost
+DB_USER=root
+DB_PASS='xx5GYC^v#5EmMJ5b5@h9jm'
+DB_NAME=BirdNest
