--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql-ssh": "^1.0.6",
     "mysql2": "^2.3.3",
