--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@expo-google-fonts/pacifico": "^0.2.2",
     "@mdi/js": "^6.9.96",
     "@mdi/react": "^1.6.0",
     "@react-navigation/native": "^6.0.11",
@@ -19,6 +20,8 @@
     "@rneui/themed": "^0.0.0-edge.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
