update google login

--- a/client/app.json
+++ b/client/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "testing",
-    "slug": "testing",
+    "owner": "quocduyvu6262",
+    "name": "BirdNest",
+    "slug": "BirdNest",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,7 +19,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "host.exp.exponent",
+      "config": {
+        "googleSignIn": {
+          "reservedClientId": "com.googleusercontent.apps.314578595226-b3s224tv48jeitll80p17kr2gt7sque0"
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
