--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
     "res": "^0.4.0"
   },
   "devDependencies": {
