--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/pacifico": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-google-signin/google-signin": "^8.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
+    "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-app-loading": "^2.0.0",
     "expo-application": "^4.1.0",
     "expo-auth-session": "^3.6.1",
     "expo-google-sign-in": "~10.2.0",
