--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-auth-session": "^3.6.1",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
