--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-application": "^4.1.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -31,7 +32,9 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
-    "res": "^0.4.0"
+    "res": "^0.4.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-random": "~12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
