--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
     "react-query": "^4.0.0",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
