--- a/client/package.json
+++ b/client/package.json
@@ -36,9 +36,12 @@
     "react-native": "0.68.2",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-shared-element": "^3.1.3",
     "react-query": "^4.0.0",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
