--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,4 @@ DB_USER=root
 DB_PASS='xx5GYC^v#5EmMJ5b5@h9jm'
 DB_NAME=BirdNest
 IOS_GOOGLE_CLIENT_ID=314578595226-b3s224tv48jeitll80p17kr2gt7sque0.apps.googleusercontent.com
+MY_SECURE_AUTH_STATE_KEY=MySecureAuthStateKey
