--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.2.2",
     "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-application": "^4.1.0",
