--- a/client/package.json
+++ b/client/package.json
@@ -30,11 +30,13 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "^2.9.1",
