--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "expo-application": "^4.1.0",
     "expo-auth-session": "^3.6.1",
     "expo-google-sign-in": "~10.2.0",
+    "expo-notifications": "^0.15.4",
     "expo-random": "^12.2.0",
     "expo-secure-store": "^11.2.0",
     "expo-splash-screen": "~0.15.1",
@@ -39,10 +40,12 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
     "react-navigation-shared-element": "^3.1.3",
     "react-query": "^4.0.0",
+    "slide-button": "^1.0.4",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
