Login + History + SecureStore

--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.2.2",
     "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-application": "^4.1.0",
@@ -30,11 +31,13 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "^2.9.1",
