--- a/client/ios/BirdNest/Info.plist
+++ b/client/ios/BirdNest/Info.plist
@@ -26,6 +26,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>host.exp.exponent</string>
+          <string>host.exp.exponent</string>
         </array>
       </dict>
       <dict>
