--- a/client/package.json
+++ b/client/package.json
@@ -40,7 +40,7 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
-    "react-native-reanimated": "^2.9.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
