--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
+    "@reduxjs/toolkit": "^1.8.3",
     "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
@@ -52,6 +53,8 @@
     "react-navigation": "^4.4.4",
     "react-navigation-shared-element": "^3.1.3",
     "react-query": "^4.0.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "slide-button": "^1.0.4",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
