--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,8 @@
     "react-query": "^4.0.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "slide-button": "^1.0.4",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
