--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "expo-secure-store": "^11.2.0",
     "react-native-dotenv": "^3.3.1"
   }
