--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "prepare": "patch-package"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/pacifico": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-google-signin/google-signin": "^8.0.0",
@@ -25,6 +26,7 @@
     "expo-app-loading": "^2.0.0",
     "expo-application": "^4.1.0",
     "expo-auth-session": "^3.6.1",
+    "expo-google-fonts": "^0.0.0",
     "expo-google-sign-in": "~10.2.0",
     "expo-network": "~4.2.0",
     "expo-notifications": "^0.15.4",
