--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "expo-app-loading": "^2.0.0",
     "expo-application": "^4.1.0",
     "expo-auth-session": "^3.6.1",
-    "expo-font": "~10.1.0",
+    "expo-google-fonts": "^0.0.0",
     "expo-google-sign-in": "~10.2.0",
     "expo-network": "~4.2.0",
     "expo-notifications": "^0.15.4",
