--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "expo-app-loading": "^2.0.0",
     "expo-application": "^4.1.0",
     "expo-auth-session": "^3.6.1",
+    "expo-cli": "^6.0.1",
     "expo-google-fonts": "^0.0.0",
     "expo-google-sign-in": "~10.2.0",
     "expo-network": "~4.2.0",
