--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^2.3.3",
     "mysql2-ssh": "^1.2.0",
     "nodemon": "^2.0.19",
+    "socket.io": "^4.5.1",
     "ssh2": "^1.11.0",
     "tunnel-ssh": "^4.1.6"
   },
