--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "slide-button": "^1.0.4",
+    "socket.io-client": "^4.5.1",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
