--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/pacifico": "^0.2.2",
+    "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -36,6 +37,7 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "expo-web-browser": "~10.2.1",
+    "firebase": "^7.9.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
@@ -46,6 +48,8 @@
     "react-google-login": "^5.2.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
