--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-google-login": "^5.2.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
