Updating Elie Branch

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@rneui/themed": "^4.0.0-rc.5",
+    "add": "^2.0.6",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "expo": "~45.0.0",
@@ -43,7 +44,9 @@
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
     "jwt-decode": "^3.1.2",
+    "nativescript-plugin-firebase": "^10.6.3",
     "patch-package": "^6.4.7",
+    "plugin": "^0.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
