--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/pacifico": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-firebase/app": "^15.2.0",
+    "@react-native-firebase/auth": "^15.2.0",
+    "@react-native-firebase/firestore": "^15.2.0",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -35,8 +38,9 @@
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
+    "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.1",
+    "firebase": "^9.9.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
@@ -47,6 +51,7 @@
     "react-google-login": "^5.2.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
