--- a/client/package.json
+++ b/client/package.json
@@ -25,40 +25,41 @@
     "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "expo": "~45.0.0",
-    "expo-app-loading": "^2.0.0",
-    "expo-application": "^4.1.0",
-    "expo-auth-session": "^3.6.1",
+    "expo": "^46.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-application": "~4.2.2",
+    "expo-auth-session": "~3.7.1",
     "expo-cli": "^6.0.1",
     "expo-google-fonts": "^0.0.0",
     "expo-google-sign-in": "~10.2.0",
-    "expo-network": "~4.2.0",
-    "expo-notifications": "^0.15.4",
-    "expo-random": "^12.2.0",
-    "expo-secure-store": "~11.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
-    "expo-web-browser": "~10.2.1",
-    "firebase": "^9.9.1",
+    "expo-network": "~4.3.0",
+    "expo-notifications": "~0.16.1",
+    "expo-random": "~12.3.0",
+    "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.3",
+    "expo-web-browser": "~11.0.0",
+    "firebase": "^9.6.11",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
     "jwt-decode": "^3.1.2",
     "patch-package": "^6.4.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "pkg": "^5.8.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-google-login": "^5.2.2",
-    "react-native": "0.68.2",
+    "react-native": "0.69.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-navigation-shared-element": "^3.1.3",
     "react-query": "^4.0.0",
@@ -72,7 +73,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "private": true
