--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "expo-secure-store": "^11.2.0",
-    "react-native-dotenv": "^3.3.1"
+    "react-native-dotenv": "^3.3.1",
+    "react-native-snap-carousel": "^3.9.1"
   }
 }
