--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.3",
     "expo-web-browser": "~11.0.0",
-    "firebase": "^9.6.11",
+    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
@@ -55,6 +55,7 @@
     "react-google-login": "^5.2.2",
     "react-native": "0.69.3",
     "react-native-dotenv": "^3.3.1",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
