--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
+    "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
@@ -46,6 +46,7 @@
     "react-google-login": "^5.2.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
@@ -60,6 +61,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "rneui": "^1.0.0-stable.0",
     "slide-button": "^1.0.4",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
