--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.1",
+    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
@@ -46,7 +47,9 @@
     "react-google-login": "^5.2.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-element": "^1.2.1",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
