--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
-    "android": "expo start --android",
+    "android": "expo run:android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
@@ -56,8 +56,11 @@
     "react-native": "0.69.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-element": "^1.2.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
+    "react-native-health": "^1.12.0",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -71,6 +74,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "rneui": "^1.0.0-stable.0",
     "slide-button": "^1.0.4",
     "socket.io-client": "^4.5.1",
     "yarn": "^1.22.19",
