--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1",
     "ssh2": "^1.11.0",
+    "stream-chat": "^6.7.3",
     "tunnel-ssh": "^4.1.6"
   },
   "description": ""
