--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
+    "getstream": "^8.0.2",
     "ionicons": "^6.0.2",
     "jwt-decode": "^3.1.2",
     "nativescript-plugin-firebase": "^5.2.0",
@@ -87,6 +88,7 @@
     "rneui": "^1.0.0-stable.0",
     "slide-button": "^1.0.4",
     "socket.io-client": "^4.5.1",
+    "stream-chat": "^6.7.3",
     "stream-chat-expo": "^4.13.0",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
