--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
-    "android": "expo run:android",
+    "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
@@ -51,7 +51,6 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "^0.14.3",
     "expo-web-browser": "~11.0.0",
-    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
@@ -69,7 +68,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
-    "react-native-health": "^1.12.0",
+    "react-native-health": "^1.13.0",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
