Created Messenger Pigeon and Messenger Pigeon UI, along other UI stuff

--- a/client/ios/BirdNest/Info.plist
+++ b/client/ios/BirdNest/Info.plist
@@ -53,6 +53,10 @@
         </dict>
       </dict>
     </dict>
+    <key>NSHealthShareUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to check health info</string>
+    <key>NSHealthUpdateUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to update health info</string>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
