--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@expo-google-fonts/pacifico": "^0.2.2",
     "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-community/netinfo": "9.3.0",
     "@react-native-firebase/app": "^15.2.0",
     "@react-native-firebase/auth": "^15.2.0",
     "@react-native-firebase/firestore": "^15.2.0",
@@ -28,29 +28,29 @@
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "expo": "^45.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-application": "~4.1.0",
-    "expo-auth-session": "~3.6.1",
-    "expo-av": "~11.2.3",
+    "expo": "^46.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-application": "~4.2.2",
+    "expo-auth-session": "~3.7.1",
+    "expo-av": "~12.0.3",
     "expo-cli": "^6.0.1",
-    "expo-document-picker": "~10.2.1",
-    "expo-file-system": "~14.0.0",
+    "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0",
     "expo-google-fonts": "^0.0.0",
     "expo-google-sign-in": "~10.2.0",
-    "expo-haptics": "~11.2.0",
-    "expo-image-manipulator": "~10.3.1",
-    "expo-image-picker": "~13.1.1",
-    "expo-media-library": "~14.1.0",
-    "expo-network": "~4.2.0",
-    "expo-notifications": "~0.15.4",
-    "expo-random": "~12.2.0",
-    "expo-secure-store": "~11.2.0",
-    "expo-sharing": "~10.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
-    "expo-web-browser": "~10.2.1",
+    "expo-haptics": "~11.3.0",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-media-library": "~14.2.0",
+    "expo-network": "~4.3.0",
+    "expo-notifications": "~0.16.1",
+    "expo-random": "~12.3.0",
+    "expo-secure-store": "~11.3.0",
+    "expo-sharing": "~10.3.0",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "^0.14.3",
+    "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "getstream": "^8.0.2",
@@ -59,25 +59,25 @@
     "nativescript-plugin-firebase": "^5.2.0",
     "patch-package": "^6.4.7",
     "pkg": "^5.8.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-google-login": "^5.2.2",
-    "react-native": "0.68.2",
+    "react-native": "0.69.4",
     "react-native-document-picker": "^8.1.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-element": "^1.2.1",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-health": "^1.13.0",
     "react-native-paper": "^4.12.3",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-navigation-shared-element": "^3.1.3",
     "react-query": "^4.0.0",
@@ -88,14 +88,13 @@
     "rneui": "^1.0.0-stable.0",
     "slide-button": "^1.0.4",
     "socket.io-client": "^4.5.1",
-    "stream-chat": "^6.7.3",
     "stream-chat-expo": "^4.13.0",
     "stream-chat-react-native": "^4.13.0",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "private": true
