--- a/client/package.json
+++ b/client/package.json
@@ -34,27 +34,27 @@
     "expo-document-picker": "~10.1.3",
     "expo-file-system": "~13.1.4",
     "expo-google-fonts": "^0.0.0",
-    "expo-google-sign-in": "~10.2.0",
-    "expo-haptics": "~11.3.0",
-    "expo-image-manipulator": "~10.4.0",
-    "expo-image-picker": "~13.3.1",
-    "expo-media-library": "~14.2.0",
-    "expo-network": "~4.3.0",
-    "expo-notifications": "~0.16.1",
-    "expo-random": "~12.3.0",
-    "expo-secure-store": "~11.3.0",
-    "expo-sharing": "~10.3.0",
-    "expo-splash-screen": "~0.16.1",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "^0.14.3",
-    "expo-web-browser": "~11.0.0",
+    "expo-google-sign-in": "~10.1.0",
+    "expo-haptics": "~11.1.0",
+    "expo-image-manipulator": "~10.2.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-media-library": "~14.0.0",
+    "expo-network": "~4.1.0",
+    "expo-notifications": "~0.14.0",
+    "expo-random": "~12.1.1",
+    "expo-secure-store": "~11.1.0",
+    "expo-sharing": "~10.1.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
+    "expo-web-browser": "~10.1.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "ionicons": "^6.0.2",
     "jwt-decode": "^3.1.2",
     "patch-package": "^6.4.7",
     "pkg": "^5.4.1",
-    "react": "18.0.0",
+    "react": "17.0.2",
     "react-dom": "18.0.0",
     "react-google-login": "^5.2.2",
     "react-native": "^0.67.4",
