--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "expo-app-loading": "~2.1.0",
     "expo-application": "~4.2.2",
     "expo-auth-session": "~3.7.1",
-    "expo-av": "~12.0.3",
+    "expo-av": "~12.0.4",
     "expo-cli": "^6.0.1",
     "expo-document-picker": "~10.3.0",
     "expo-file-system": "~14.1.0",
@@ -49,7 +49,7 @@
     "expo-sharing": "~10.3.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "^0.14.3",
+    "expo-updates": "~0.14.3",
     "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
@@ -71,6 +71,7 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-health": "^1.13.0",
+    "react-native-network-info": "^5.2.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
