--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
     "expo-app-loading": "~2.1.0",
     "expo-application": "~4.2.2",
     "expo-auth-session": "~3.7.1",
-    "expo-av": "~12.0.3",
+    "expo-av": "~12.0.4",
     "expo-cli": "^6.0.1",
     "expo-document-picker": "~10.3.0",
     "expo-file-system": "~14.1.0",
@@ -90,6 +90,7 @@
     "rneui": "^1.0.0-stable.0",
     "slide-button": "^1.0.4",
     "socket.io-client": "^4.5.1",
+    "stream-chat": "^6.7.3",
     "stream-chat-expo": "^4.13.0",
     "stream-chat-react-native": "^4.13.0",
     "yarn": "^1.22.19",
