--- a/client/package.json
+++ b/client/package.json
@@ -58,7 +58,7 @@
     "react": "17.0.2",
     "react-dom": "18.0.0",
     "react-google-login": "^5.2.2",
-    "react-native": "0.69.4",
+    "react-native": "^0.69.4",
     "react-native-document-picker": "^8.1.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
