--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.5",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
@@ -34,7 +35,7 @@
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.3",
+    "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
@@ -44,7 +45,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
+    "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
