--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,8 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/pacifico": "^0.2.2",
     "@material-ui/core": "^4.12.4",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/netinfo": "7.1.3",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "9.3.0",
     "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -26,29 +26,29 @@
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "expo": "^44.0.6",
-    "expo-app-loading": "~1.3.0",
-    "expo-application": "~4.0.1",
-    "expo-auth-session": "~3.5.0",
-    "expo-av": "~10.2.0",
+    "expo": "^46.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-application": "~4.2.2",
+    "expo-auth-session": "~3.7.1",
+    "expo-av": "~12.0.4",
     "expo-cli": "^4.3.0",
-    "expo-document-picker": "~10.1.3",
-    "expo-file-system": "~13.1.4",
+    "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0",
     "expo-google-fonts": "^0.0.0",
     "expo-google-sign-in": "~10.1.0",
-    "expo-haptics": "~11.1.0",
-    "expo-image-manipulator": "~10.2.0",
-    "expo-image-picker": "~12.0.1",
-    "expo-media-library": "~14.0.0",
-    "expo-network": "~4.1.0",
-    "expo-notifications": "~0.14.0",
-    "expo-random": "~12.1.1",
-    "expo-secure-store": "~11.1.0",
-    "expo-sharing": "~10.1.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
-    "expo-web-browser": "~10.1.0",
+    "expo-haptics": "~11.3.0",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-media-library": "~14.2.0",
+    "expo-network": "~4.3.0",
+    "expo-notifications": "~0.16.1",
+    "expo-random": "~12.3.0",
+    "expo-secure-store": "~11.3.0",
+    "expo-sharing": "~10.3.0",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.4",
+    "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "getstream": "^8.0.2",
@@ -56,23 +56,23 @@
     "jwt-decode": "^3.1.2",
     "patch-package": "^6.4.7",
     "pkg": "^5.4.1",
-    "react": "17.0.2",
+    "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-google-login": "^5.2.2",
-    "react-native": "^0.69.4",
+    "react-native": "0.69.4",
     "react-native-document-picker": "^8.1.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-element": "^1.2.1",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-health": "^1.13.0",
     "react-native-paper": "^4.12.3",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
