Updatin filter UI for dropdown

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "expo-secure-store": "^11.2.0",
+    "expo-updates": "~0.14.4",
+    "ip": "^1.1.8",
+    "os": "^0.1.2",
     "react-native-dotenv": "^3.3.1"
   }
 }
