--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,7 @@
     "expo-sharing": "~10.3.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.3",
+    "expo-updates": "~0.14.4",
     "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
@@ -73,6 +73,7 @@
     "react-native-health": "^1.13.0",
     "react-native-network-info": "^5.2.1",
     "react-native-paper": "^4.12.3",
+    "react-native-public-ip": "^1.0.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
