--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "expo-application": "~4.2.2",
     "expo-auth-session": "~3.7.1",
     "expo-av": "~12.0.4",
-    "expo-cli": "^6.0.1",
+    "expo-cli": "^4.3.0",
     "expo-document-picker": "~10.3.0",
     "expo-file-system": "~14.1.0",
     "expo-google-fonts": "^0.0.0",
@@ -48,7 +48,7 @@
     "expo-sharing": "~10.3.0",
     "expo-splash-screen": "^0.16.1",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.4",
+    "expo-updates": "^0.14.4",
     "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
