Successful in uploading single image but not multiple images

--- a/client/app.json
+++ b/client/app.json
@@ -38,7 +38,13 @@
     },
     "scheme": "host.exp.exponent",
     "plugins": [
-      "react-native-health"
+      "react-native-health",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
     ]
   }
 }
