--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
     "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "^9.3.0",
-    "@react-native-google-signin/google-signin": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -36,9 +35,9 @@
     "expo-document-picker": "~10.3.0",
     "expo-file-system": "~14.1.0",
     "expo-google-fonts": "^0.0.0",
-    "expo-google-sign-in": "~10.1.0",
     "expo-haptics": "~11.3.0",
     "expo-image-manipulator": "~10.4.0",
+    "expo-image-multiple-picker": "^4.4.0",
     "expo-image-picker": "~13.3.1",
     "expo-media-library": "~14.2.0",
     "expo-network": "~4.3.0",
@@ -50,6 +49,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "^0.14.4",
     "expo-web-browser": "~11.0.0",
+    "firebase": "^9.1.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "getstream": "^8.0.2",
@@ -65,9 +65,9 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-element": "^1.2.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^1.0.4",
-    "react-native-google-signin": "^2.1.1",
     "react-native-health": "^1.13.0",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.9.1",
