--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "expo-file-system": "^14.1.0",
     "expo-secure-store": "^11.2.0",
     "react-native-dotenv": "^3.3.1"
   }
