--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-health": "^1.13.0",
+    "react-native-multiple-select": "^0.5.10",
     "react-native-network-info": "^5.2.1",
     "react-native-paper": "^4.12.3",
     "react-native-public-ip": "^1.0.2",
@@ -77,6 +78,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-tags-input": "^1.0.10",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.7",
     "react-navigation": "^4.4.4",
