--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "babel-plugin-inline-import": "^3.0.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "dotenv": "^16.0.1",
     "expo": "^46.0.6",
     "expo-app-loading": "~2.1.0",
