--- a/client/package.json
+++ b/client/package.json
@@ -64,6 +64,7 @@
     "react-native": "^0.69.4",
     "react-native-document-picker": "^8.1.1",
     "react-native-dotenv": "^3.3.1",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-easy-grid": "^0.2.2",
     "react-native-element": "^1.2.1",
     "react-native-fs": "^2.20.0",
