--- a/client/package.json
+++ b/client/package.json
@@ -49,11 +49,12 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "^0.14.4",
     "expo-web-browser": "~11.0.0",
-    "firebase": "^9.1.0",
+    "firebase": "^9.6.11",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "getstream": "^8.0.2",
-    "idb": "^7.0.1",
+    "idb": "^7.0.2",
+    "immer": "^9.0.15",
     "ionicons": "^6.0.2",
     "jwt-decode": "^3.1.2",
     "patch-package": "^6.4.7",
