--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "^9.3.0",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -76,6 +77,7 @@
     "react-native-network-info": "^5.2.1",
     "react-native-paper": "^4.12.3",
     "react-native-public-ip": "^1.0.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
