--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
     "expo-image-picker": "~13.3.1",
     "expo-media-library": "~14.2.0",
     "expo-network": "~4.3.0",
-    "expo-notifications": "^0.16.1",
+    "expo-notifications": "~0.16.1",
+    "expo-permissions": "~13.2.0",
     "expo-random": "~12.3.0",
     "expo-secure-store": "~11.3.0",
     "expo-sharing": "~10.3.0",
@@ -72,6 +73,7 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-health": "^1.13.0",
     "react-native-paper": "^4.12.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
@@ -94,7 +96,9 @@
     "stream-chat-expo": "^4.13.0",
     "stream-chat-react-native": "^4.13.0",
     "yarn": "^1.22.19",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-constants": "~13.2.3",
+    "expo-device": "~4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
