--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "getstream": "^8.0.2",
     "ionicons": "^6.0.2",
     "jwt-decode": "^3.1.2",
+    "modal-react-native-web": "^0.2.0",
     "moment": "^2.29.4",
     "patch-package": "^6.4.7",
     "pkg": "^5.4.1",
@@ -74,6 +75,7 @@
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-easy-grid": "^0.2.2",
     "react-native-element": "^1.2.1",
+    "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^1.0.4",
