--- a/client/package.json
+++ b/client/package.json
@@ -2,17 +2,11 @@
   "name": "testing",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "prepare": "patch-package",
-    "constants": "echo 'Update Expo CONSTANTS secret with value: \n\n' && cat constants.js |base64",
-    "eas-build-pre-install": "echo $CONSTANTS | base64 -d > ./constants.js"
-  },
-  "exports": {
-    "./*": "./*"
+    "eject": "expo eject"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
