--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,7 @@
     "expo-sharing": "~10.3.0",
     "expo-splash-screen": "^0.16.1",
     "expo-status-bar": "~1.4.0",
-    "expo-updates": "^0.14.4",
+    "expo-updates": "~0.14.5",
     "expo-web-browser": "~11.0.0",
     "firebase": "^9.1.0",
     "formik": "^2.2.9",
@@ -66,7 +66,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-login": "^5.2.2",
-    "react-native": "^0.69.4",
+    "react-native": "0.69.5",
     "react-native-document-picker": "^8.1.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-easy-grid": "^0.2.2",
